welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: not found: value bOK
  if (bOK==false){if (a<=b && b<=c){return true};return false}
      ^