welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
  if (bOK==false){if (a<=b && b<=c){return true};return false}
  if (a<=c && b<=c){return true}
  return false}